Added user profile, Log out method, Game stats class, profile picture

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -24,13 +24,13 @@
             android:textAlignment="center" />
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             android:minHeight="55dp"
-            android:hint="Username"
+            android:hint="Email"
             />
 
         <EditText
